[package]
authors = ["zegevlier <iamascratcher@gmail.com>", "mazkdevf <https://github.com/mazk5145>"]
edition = "2018"
name = "keyauth"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.4"
base16 = "0.2.1"
block-modes = "0.8.1"
machine_uuid = "0.1.0"
obfstr = "0.3.0"
reqwest = {version = "0.11.3", features = ["blocking"]}
rust-crypto = "0.2.36"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
uuid = {version = "0.8.2", features = ["v4"]}
webbrowser = "0.5.5"
