[package]
authors = ["EBSmash <https://github.com/EBSmash" , "zegevlier <iamascratcher@gmail.com>", "mazkdevf <https://github.com/mazk5145>"]
edition = "2018"
name = "keyauth"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base16 = "0.2.1"
block-modes = "0.9.1"
machine_uuid = "0.1.0"
obfstr = "0.4.1"
reqwest = {version = "0.11.3", features = ["blocking"]}
sha256 = "1.1.1"
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
uuid = {version = "1.2.2", features = ["v4"]}
webbrowser = "0.8.4"
